--- a/python/my_web_server/static/form.html
+++ b/python/my_web_server/static/form.html
@@ -5,12 +5,12 @@
     <title>Form - HenachokoServer</title>
 </head>
 <body>
-<form action="/show_request" method="post" enctype="multipart/form-data">
+<form action="/parameters" method="post">
     テキストボックス: <input name="text_name" type="text"/> <br>
     パスワード: <input name="password_name" type="password"/> <br>
     テキストエリア: <br>
     <textarea cols="40" name="text_area_name" rows="4"></textarea>
-    <table border="1">
+    <table style="border: 1px;">
         <tr>
             <td>
                 ラジオボタン: <br>
